--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,3 +9,6 @@ MY_SQL_USERNAME = root
 MY_SQL_PASSWORD = amir8383
 MY_SQL_DATABASE = online-shop
 MY_SQL_PORT = 3306
+
+#JWT
+JWT_SECRET = qokanwwrem$poaweneNiya&Amir
