add new enviroment variables

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -12,3 +12,9 @@ MY_SQL_PORT = 3306
 
 #JWT
 JWT_SECRET = qokanwwrem$poaweneNiya&Amir
+
+#S3
+S3_SECRET = 
+S3_ACCESS = 
+S3_BUCKET = 
+S3_ENDPOINT =
